--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,17 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="91dp"
-        android:layout_height="57dp"
+        android:id="@+id/email_text_view"
+        android:layout_width="188dp"
+        android:layout_height="55dp"
         android:text="Hello World!"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
