--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,19 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#FFFFFF"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".LoginActivity">
 
     <ImageView
-        android:id="@+id/imagen_inicial"
-        android:layout_width="219dp"
-        android:layout_height="215dp"
-        android:layout_marginStart="95dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="50dp"
-        android:contentDescription="@string/todo"
-        app:srcCompat="@drawable/whimfood" />
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        android:contentDescription="@string/login1"
+        app:srcCompat="@drawable/imalogin" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/email_text_input_layout"
@@ -29,6 +27,7 @@
             android:id="@+id/email_input_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#BEBBDD"
             android:hint="@string/email"
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -45,6 +44,7 @@
             android:id="@+id/password_input_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#BEBBDD"
             android:hint="@string/password"
             android:inputType="textPassword" />
 
@@ -52,25 +52,49 @@
 
     <Button
         android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="#1F177D"
+        android:text="@string/login1"
+        android:textColor="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/login_butto_text" />
+        android:layout_marginTop="10dp"
+        android:text="@string/cuenta"
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/register_link"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/register_text_link"
         android:clickable="true"
+        android:focusable="true"
+        android:text="@string/register_text_link1"
         android:textAlignment="center"
         android:textColor="#333131"
-        android:focusable="true" />
+        android:textSize="14sp"
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/prueba"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="398dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/welcome"
+        android:textAlignment="center"
+        android:textColor="#1F177D"
+        android:textSize="24sp"
+        android:textStyle="italic" />
 
 </LinearLayout>
