--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".RegistroActivity">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="213dp"
+        android:layout_gravity="center"
+        android:contentDescription="@string/img"
+        app:srcCompat="@drawable/imalogin" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="296dp"
-        android:layout_height="62dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
         android:text="@string/regieter_account_title"
         android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115" />
+        android:textColor="#1f177d"
+        android:textSize="18sp"
+        android:textStyle="italic" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/fullname_register_text_input_layout"
@@ -27,17 +34,15 @@
         android:layout_height="wrap_content"
         android:isScrollContainer="false"
         app:helperText="@string/requiered_field"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.276"
-        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
-        tools:layout_editor_absoluteX="0dp">
+        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/fullname_register_input_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/full_name" />
+            android:layout_marginTop="20dp"
+            android:background="#BEBBDD"
+            android:hint="@string/fullname1" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -45,16 +50,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:helperText="@string/requiered_field"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.416"
-        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
-        tools:layout_editor_absoluteX="0dp">
+        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email_register_input_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="#BEBBDD"
             android:hint="@string/email"
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -65,16 +68,15 @@
         android:layout_height="wrap_content"
         app:endIconMode="password_toggle"
         app:helperText="@string/requiered_field"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.561"
-        app:startIconDrawable="@drawable/ic_baseline_lock_24"
-        tools:layout_editor_absoluteX="0dp">
+        app:startIconDrawable="@drawable/ic_baseline_lock_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_register_input_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="0dp"
+            android:background="#BEBBDD"
             android:hint="@string/password_register"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -83,19 +85,19 @@
         android:id="@+id/repeat_password_text_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="220dp"
+        android:layout_marginBottom="0dp"
         app:endIconMode="password_toggle"
         app:errorEnabled="true"
-        app:helperText="@string/password_repeated"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:startIconDrawable="@drawable/ic_baseline_repeat_24"
-        tools:layout_editor_absoluteX="0dp">
+        app:helperText="@string/PR"
+        app:startIconDrawable="@drawable/ic_baseline_repeat_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/repeat_password_input_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/password_repeated"
+            android:layout_marginTop="10dp"
+            android:background="#BEBBDD"
+            android:hint="@string/PR"
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -104,13 +106,13 @@
         android:id="@+id/register_button"
         android:layout_width="170dp"
         android:layout_height="57dp"
+        android:layout_gravity="center"
         android:layout_marginStart="126dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="125dp"
+        android:backgroundTint="#1F177D"
+        android:gravity="center"
         android:text="@string/register_button_msm"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.847" />
+        android:textColor="#FFFFFF" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
