--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:background="#BEBBDD"
+            android:background="#A9AFCA"
             android:hint="@string/fullname1" />
     </com.google.android.material.textfield.TextInputLayout>
 
